// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`airtableRecordToItem A 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`deleteItem A delete an item in state 1`] = `
{
  "data": {
    "deleted": true,
    "id": "itemA",
  },
  "error": undefined,
  "issues": undefined,
  "output": {
    "deleted": true,
    "id": "itemA",
  },
  "success": true,
  "typed": true,
}
`;

exports[`formToItem A default itemForm 1`] = `
{
  "barcode": "",
  "box": "",
  "brand": "",
  "category": "",
  "details": "",
  "drawer": "",
  "id": "",
  "location": "",
  "name": "",
  "photo": [],
  "price": undefined,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`formToItem B itemForm with some values 1`] = `
{
  "barcode": "",
  "box": "",
  "brand": "",
  "category": "",
  "details": "",
  "drawer": "",
  "id": "",
  "location": "",
  "name": "",
  "photo": [
    {
      "url": "https://photos.org/200/200",
    },
  ],
  "price": 42,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`getAllItems A no offset 1`] = `
{
  "records": [
    {
      "createdTime": "",
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "",
        "status": "acheté",
        "updated-on": "",
      },
      "id": "rec123",
    },
  ],
}
`;

exports[`getAllItems B with offset 1`] = `
{
  "records": [
    {
      "createdTime": "",
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "",
        "status": "acheté",
        "updated-on": "",
      },
      "id": "rec123",
    },
  ],
}
`;

exports[`getCommonListsFromItems A 1`] = `
{
  "boxes": [
    "",
    "box B",
  ],
  "categories": [
    "",
    "category B",
  ],
  "drawers": [
    "",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
  ],
  "locations": [
    "",
    "location A",
    "location B",
  ],
  "statuses": [
    "",
    "à donner",
    "à vendre",
    "acheté",
    "donné",
    "jeté",
    "new surprise status",
    "renvoyé",
    "vendu",
  ],
}
`;

exports[`getOneItem A success result 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`pushItem A item with no id should post remotely & push locally 1`] = `
{
  "data": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "freshly-created",
  },
  "error": undefined,
  "issues": undefined,
  "output": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "freshly-created",
  },
  "success": true,
  "typed": true,
}
`;

exports[`pushItem A item with no id should post remotely & push locally 3`] = `
{
  "fields": {
    "barcode": "barcode B",
    "box": "box B",
    "brand": "brand B",
    "category": "category B",
    "details": "details B",
    "drawer": "drawer B",
    "location": "location B",
    "name": "name B",
    "photo": [
      {
        "url": "https://picsum.photos/seed/name B/200/200",
      },
    ],
    "ref-printed": false,
    "reference": "reference B",
    "status": "acheté",
  },
}
`;

exports[`pushItem B item with id should patch remotely & update locally 1`] = `
{
  "data": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "existing",
  },
  "error": undefined,
  "issues": undefined,
  "output": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "existing",
  },
  "success": true,
  "typed": true,
}
`;

exports[`pushItem B item with id should patch remotely & update locally 3`] = `
{
  "fields": {
    "details": "new details",
  },
}
`;
